<layout>
    <data/>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/lbl_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_your_name"
        app:layout_constraintBottom_toBottomOf="@id/title_value"
        android:paddingEnd="25dp"
        android:text="@string/note_title"
        />

    <EditText
        android:id="@+id/title_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:autofillHints="Your name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/add_note_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_string"
        app:layout_constraintTop_toBottomOf="@+id/lbl_your_name" />

    <TextView
        android:id="@+id/detail_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_string"
        app:layout_constraintTop_toBottomOf="@id/title_value"
        app:layout_constraintBottom_toBottomOf="@id/detail_value"
        android:text="@string/note_details"
        />

    <EditText
        android:id="@+id/detail_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:autofillHints="Your name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/add_note_detail_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/title_value"
        app:layout_constraintTop_toBottomOf="@+id/title_value" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_value"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        android:text="@string/submit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>